--- a/Lab Institut/Accueil.html
+++ b/Lab Institut/Accueil.html
@@ -70,8 +70,8 @@
 
 				</div>
 				<div>
-					<input id="bout" type="button" value="Envoyer">
-					<input  type="button" value="Reinitialiser">
+					<input id="bout" type="submit" value="Envoyer">
+					<input  type="reset" value="Reinitialiser">
 				</div>
 			</form>
             <hr>
