--- a/Exercices/Exercice6/index.htm
+++ b/Exercices/Exercice6/index.htm
@@ -13,6 +13,7 @@
 <div class="form-style">
 	<h1>Entrez les informations du membre</h1>
 	<div>
+		<form method="post" action="">
 		<label for="Nom">Nom <span>*</span></label>
 		<input type="text" name="txtNom" value="" required="required"/>
 		<br>
@@ -82,14 +83,14 @@
 	</div>
 	<br>
 	<br>
-	
+
 	<div  >
 		<input class="bouton" type="submit"   value="Envoyer"/>
 		<input  class="bouton" type="reset"   value="Reinitialiser"/>
 
 	</div>
 
-
+	</form>
 
 </div>
 </body>
