--- a/Exercices/exo2/index.html
+++ b/Exercices/exo2/index.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
+    <meta  charset="UTF-8" >
+    <meta name="title" content="Exo">
+    <meta name="description" content="un exo parmis tant">
+    <meta name="author" content="yoan Rinaldi">
+    <meta name="keywords" content="web, Internet,net,css">
+    <meta name="robots" content="index,follow">
+    <link rel="stylesheet" href="style.css">
     <title>Exercice2</title>
 </head>
 <body>
-<h1>Le html sans le css c est moche</h1>
-<p>Alors je vais vous expliauer simplement a l aide de paragraphe liste et autre methode pourquoi le html est vraiment moche sans le css  </p>
-<ul>
-    <li>C est moche</li>
-    <li>C est moche</li>
-    <li>C est moche</li>
-    <li>C est moche</li>
+    <h1 class="test">Le html sans le css c est moche</h1>
 
-</ul>
+    <p>Alors je vais vous expliauer simplement a l aide de paragraphe liste et autre methode pourquoi le html est vraiment moche sans le css.  </p>
+
+    <ul>
+        <li id="marron">C est moche</li>
+        <li id="jaune">C est moche</li>
+        <li id="rouge">C est moche</li>
+        <li id="vert">C est moche</li>
+
+    </ul>
 <h2>Le html sans le css c est moche 2.0</h2>
-<p>Desoler j ai la flemme </p>
-<a href="page2.html" > page final </a>
+
+<p>Desoler j ai la flemme.</p>
+
+<a href="page2.html" > Page final </a>
 <br>
  <a href="https://www.linkedin.com"> Tien si tu as pas d amis</a>
+<footer>
+    <p>Rinaldi <span>Yoan</span></p>
+</footer>
+
 </body>
 </html>
