--- a/ExercicesJS/GarderieAnimaux/index.html
+++ b/ExercicesJS/GarderieAnimaux/index.html
@@ -12,29 +12,30 @@
 	<p class="titre">SERVICE DE GARDERIE</p>
 
 	<p class="Align"> <label >Choix du vétérinaire:</label>
-	<select  id="lstVeterinaire" name="lstVeterinaire">
-		<option value="Audrey Bouchard" >Audrey Bouchard</option>
-		<option value="Stéphane Tremblay"  >Stéphane Tremblay</option>
-		<option value="Maxime Simard" >Maxime Simard</option>
-		<option value="Mélissa Caron" >Mélissa Caron</option>
-	</select>
+		<select  id="lstVeterinaire" name="lstVeterinaire">
+			<option value="Audrey Bouchard" >Audrey Bouchard</option>
+			<option value="Stéphane Tremblay"  >Stéphane Tremblay</option>
+			<option value="Maxime Simard" >Maxime Simard</option>
+			<option value="Mélissa Caron" >Mélissa Caron</option>
+		</select>
 
-	<p class="Align"> Entrez le nombre de jours:<input class="champ" id="txtNbreJours" name="txtNbreJours" value="">  </p> 
+	<p class="Align"> Entrez le nombre de jours:<input class="champ" id="txtNbreJours" name="txtNbreJours" value="">  </p>
+	<p class="Align"> Entrez le nombre d'heures de travail:<input class="champ" id="txtNbreH" name="txtNbreH" value="">  </p>
 
 	<!-- Case à cocher -->
-	<p class="Align">Service de toilettage<input type="checkbox" id="chkServ" name="chkServ">  </p> 
+	<p class="Align">Service de toilettage<input type="checkbox" id="chkServ" name="chkServ">  </p>
 
 	<!-- Case à cocher -->
 	<p class="Align">
-	Chien<input type="radio" name="radChoix" checked=true id="radChien">
-	Chat<input type="radio" name="radChoix" id="radChat">
+		Chien<input type="radio" name="radChoix" checked=true id="radChien">
+		Chat<input type="radio" name="radChoix" id="radChat">
 	</p>
 
 	<!-- label affichage -->
 	<p class="Align" id="lblMessage" name="lblMessage">le résultat s'affiche ici </p>
 
 	<!-- Bouton -->
-	<input class="label_plus" id="btnCalculer" name="btnCalculer" value="C   A   L   C   U   L   E   R" type="button" onclick="btnCalculer_onclick()"> 
+	<input class="label_plus" id="btnCalculer" name="btnCalculer" value="C   A   L   C   U   L   E   R" type="button" onclick="btnCalculer_onclick()">
 </form>
 <script src="JS/traitement.js"></script>
 </body>
