--- a/ExercicesJS/GarderieAnimaux/index.html
+++ b/ExercicesJS/GarderieAnimaux/index.html
@@ -8,7 +8,7 @@
 <body>
 <form action="" method="get">
 	<h1>La garderie animaux inc.</h1>
-	<!-- Boîtes de texte genre texte -->
+	<!-- Boîtes de texte genre  -->
 	<p class="titre">SERVICE DE GARDERIE</p>
 
 	<p class="Align"> <label >Choix du vétérinaire:</label>
