--- a/ExercicesJS/CinéClub - V2/index.htm
+++ b/ExercicesJS/CinéClub - V2/index.htm
@@ -16,7 +16,7 @@
       <!-- Liste déroulante -->
       <p> Sélectionnez le choix du film:
          <select 
-           id="lstOptions" size=1 name="lstOptions">
+           id="lstOptions" size=1 name="lstOptions" onclick="btnList_onclick()">
          	<option selected >Au poste!</option>
          	<option >Colette</option>
          	<option >Halloween</option>
@@ -35,5 +35,6 @@
        <script src="js/traitement.js"></script>
    </fieldset>
 </form>
+<img id="imgFilm" src="">
 </body>
 </html>
