--- a/ExercicesJS/Exercice _ Joueurs/index.html
+++ b/ExercicesJS/Exercice _ Joueurs/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 	<form>
-	 <h1 id="lblNbreJoueur"> Numéro du joueur 1</h1>
-	 <p>Entrez le nom du joueur: <input id="txtNom"><button id="btnRechercher" name="btnRechercher" type="button" disabled="true">Rechercher</button></p>
+	 <h1 id="lblNbreJoueur">Numéro du joueur 1 </h1>
+	 <p>Entrez le nom du joueur: <input id="txtNom"><button id="btnRechercher" name="btnRechercher" type="button" disabled="true"  onclick="btnRechercher_onclick()" >Rechercher</button></p>
 	 <p>Entrez les points:       <input id="txtPoints"  value=0></p>
 	 <p> <button id="btnAjouter" name="btnAjouter" type="button" onclick="btnAjouter_onclick()" >Ajouter</button>
 		 <button id="btnTrouverMoy" name="btnTrouverMoy" type="button"  disabled="true" onclick="btnMoy_onclick()" >Moyenne</button>
